--- a/src/app/main/layout/features/dashboard/dashboard.component.html
+++ b/src/app/main/layout/features/dashboard/dashboard.component.html
@@ -11,4 +11,8 @@
       <li class="breadcrumb-item"><span class="breadcrumb-item-router">DashBoard</span></li>
     </ul>
   </div>
+
+  <div class="tile">
+    My Bus
+  </div>
 </div>
