--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -707,18 +707,16 @@ label {
     position: fixed;
     left: 0;
     right: 0;
-    top: 0;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    top: 0px;
+    width: 99.6%;
     display: flex;
     background-color: #e68220;
     z-index: 1030;
     padding-right: 15px;
-    /*box-shadow: 0 0.46875rem 2.1875rem rgba(4,9,20,0.03), 0 0.9375rem 1.40625rem rgba(4,9,20,0.03), 0 0.25rem 0.53125rem rgba(4,9,20,0.05), 0 0.125rem 0.1875rem rgba(4,9,20,0.03)*/
-    -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
-    -moz-box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
-    box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
+    /* box-shadow: 0 0.46875rem 2.1875rem rgb(4 9 20 / 3%), 0 0.9375rem 1.40625rem rgb(4 9 20 / 3%), 0 0.25rem 0.53125rem rgb(4 9 20 / 5%), 0 0.125rem 0.1875rem rgb(4 9 20 / 3%); */
+    margin: 4px;
+    border-radius: 12px;
+    box-shadow: 0 2px 5px rgb(0 0 0 / 10%);
 }
 
 .app-header__logo {
@@ -732,6 +730,7 @@ label {
     font-size: 26px;
     font-weight: 400;
     line-height: 50px;
+    border-radius: 12px;
 }
 
 .app-sidebar__toggle {
@@ -757,7 +756,8 @@ label {
 
 .app-sidebar__toggle:hover {
     color: #FFF;
-    background-color: #636363;
+    background-color: #63390f;
+    border-radius: 12px;
 }
 
 .app-nav {
@@ -831,7 +831,8 @@ label {
 
 .app-nav__item:hover {
     color: #FFF;
-    background-color: #a11c20;
+    background-color: #63390f;
+    border-radius: 12px;
 }
 
 .logOut-dropdown {
@@ -858,7 +859,7 @@ label {
 
 .user-logOut-title {
     line-height: 14px;
-    border-right: 1px solid #db2b30;
+    border-right: 1px solid #fae6d2;
     padding-right: 10px !important;
 }
 
@@ -899,30 +900,27 @@ label {
     top: 0;
     bottom: 0;
     left: 0;
-    padding-top: 64px;
-    width: 240px;
+    margin: 65px 0 4px 4px;
+    border-radius: 12px;
+    padding-top: 8px;
+    width: 248px;
     overflow: auto;
+    border: 4px solid #e68221;
     z-index: 11;
     background-color: #636363;
-    -webkit-box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
-    box-shadow: 0px 8px 17px rgba(0, 0, 0, 0.2);
-    -webkit-transition: left 0.3s ease,
-    width 0.3s ease;
-    -o-transition: left 0.3s ease,
-    width 0.3s ease;
-    transition: left 0.3s ease,
-    width 0.3s ease;
+    box-shadow: 0px 8px 17px rgb(0 0 0 / 20%);
+    transition: left 0.3s ease, width 0.3s ease;
 }
 
 .app-sidebar__user {
-    /*display: -webkit-box;*/
-    /*display: -ms-flexbox;*/
-    /*display: flex;*/
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-  margin-bottom: 14px;
-    padding: 10px;
+    margin-bottom: 14px;
+    padding: 8px;
     color: #fff;
     text-align: center;
 }
@@ -946,7 +944,7 @@ label {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 auto;
     flex: 0 0 auto;
-    margin-bottom: 15px;
+    margin-right: 15px;
 }
 
 .app-nav__user-avatar {
@@ -961,7 +959,7 @@ label {
     height: 70px;
     width: 70px;
     padding: 4px;
-    border: 2px solid #db2b30b8;
+    border: 2px solid #ffffff;
     box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
@@ -1335,7 +1333,7 @@ li.tab.active a {
 
 .app-title {
     position: sticky;
-    top: 50px;
+    top: 68px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1350,7 +1348,7 @@ li.tab.active a {
     -ms-flex-direction: row;
     flex-direction: row;
     background-color: #FFF;
-    margin: -30px -30px 30px;
+    margin: -30px -24px 35px -10px;
     padding: 12px 30px;
     -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
@@ -1414,7 +1412,7 @@ li.tab.active a {
 }
 
 .dropdown-item:focus, .dropdown-item:hover {
-    color: #dd4d30 !important;
+    color: #e68220 !important;
     /*text-decoration: none;*/
     /*background-color: #f8f9fa;*/
 }
@@ -3322,6 +3320,7 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
 /*@media */
 @media (min-width: 768px) {
     .app-header {
+        padding: 4px;
         padding-right: 30px;
     }
 
@@ -3331,7 +3330,8 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
         flex: 0 0 auto;
         display: block;
         width: 240px;
-        background-color: #e4ebe9;
+        background-color: #63390f;
+        margin-right: 4px;
     }
 
     .app-nav {
@@ -3371,16 +3371,16 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
         display: none;
     }
 
-    .app-sidebar__user {
-        padding: 2px;
-    }
+    /*.app-sidebar__user {*/
+    /*    padding: 2px;*/
+    /*}*/
 
     .sidebar-mini.sidenav-toggled .app-sidebar__user-avatar {
         width: 36px;
         height: 36px;
         margin-bottom: 0;
         padding: 0;
-        border: 1px solid #db2b30b8;
+        border: 1px solid #FFFFFF;
     }
 
     .sidebar-mini.sidenav-toggled .app-nav__user-avatar {
@@ -3394,7 +3394,7 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
 
     .sidebar-mini.sidenav-toggled .app-sidebar {
         left: 0;
-        width: 50px;
+        width: 60px;
         overflow: hidden;
     }
 
