--- a/src/app/main/layout/features/dashboard/dashboard.component.html
+++ b/src/app/main/layout/features/dashboard/dashboard.component.html
@@ -3,12 +3,12 @@
     <div class="">
       <h1>
         <i class="fa fa-dashboard" aria-hidden="true"></i>
-        DashBoard
+        Dashboard
       </h1>
     </div>
     <ul class="app-breadcrumb breadcrumb">
       <li class="breadcrumb-item"><span class="fa fa-home fa-lg"></span></li>
-      <li class="breadcrumb-item"><span class="breadcrumb-item-router">DashBoard</span></li>
+      <li class="breadcrumb-item"><span class="breadcrumb-item-router">Dashboard</span></li>
     </ul>
   </div>
 
