--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,6 @@
 @import '~font-awesome/css/font-awesome.css';
 @import "~@ng-select/ng-select/themes/default.theme.css";
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300, 400, 500&display=swap');
 
 
 /*redifine .glyphicon*/
@@ -42,7 +43,7 @@ table.tree-grid {
 body {
     /*font-size: 0.872rem !important;*/
     font-size: 0.8rem !important;
-    font-family: 'Muli', sans-serif !important;
+    font-family: 'Lato', sans-serif !important;
     background-color: #e8eff9 !important;
 }
 
@@ -4252,4 +4253,12 @@ ul.uib-datepicker-popup.dropdown-menu.ng-scope {
     margin: 5px;
     border: 1px solid #f5f5f5;
     border-radius: 10px;
+}
+
+.cash-balance{
+    font-size: 15px;
+    color: #fff;
+    font-weight: 600;
+    font-family: auto;
+    padding-left: 25px;
 }
