--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -73,7 +73,7 @@ p {
     font-family: Poppins-Regular;
     font-size: 14px;
     line-height: 1.7;
-    color: #fff;
+    /*color: #fff;*/
     margin: 0
 }
 
