--- a/src/app/main/layout/layout.component.html
+++ b/src/app/main/layout/layout.component.html
@@ -54,60 +54,60 @@
       </div>
     </div>
     <ul class="app-menu" id="dashboard-main-menu" >
-      <li class="treeview" *ngIf="canAccessModule('cargodashboard')">
-        <a class="app-menu__item" href="" data-toggle="treeview" [routerLinkActive]="['active']">
+      <li class="treeView" *ngIf="canAccessModule('cargodashboard')">
+        <a class="app-menu__item" href="" data-toggle="treeView" [routerLinkActive]="['active']">
           <i class="fa fa-globe fa-lg"></i>
           <span class="app-menu__label">Cargo</span>
           <i class="treeView-indicator fa fa-angle-right"></i>
         </a>
             <ul class="treeView-menu">
               <li class="waves-effect waves-light">
-                <a class="treeview-item" [routerLink]="['cargoDashboard']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['cargoDashboard']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-dashboard" aria-hidden="true"></i>Cargo Dashboard
                 </a>
               </li>
               <li class="waves-effect waves-light" *ngIf="canAccessModule('cargodashboard')">
-                <a class="treeview-item" [routerLink]="['newBooking']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['newBooking']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-plus-square-o" aria-hidden="true"></i>New Booking
                 </a>
               </li>
               <li class="waves-effect waves-light" *ngIf="canAccessModule('cargobookings')">
-                <a class="treeview-item" [routerLink]="['cargoBooking']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['cargoBooking']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-file-pdf-o" aria-hidden="true"></i>Cargo Bookings
                 </a>
               </li>
               <li class="waves-effect waves-light" *ngIf="canAccessModule('cargobookings')">
-                <a class="treeview-item" [routerLink]="['cargoBookingChart']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['cargoBookingChart']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-bar-chart" aria-hidden="true"></i>Cargo Booking Chart
                 </a>
               </li>
               <li class="waves-effect waves-light" *ngIf="canAccessModule('branchbookingsummary')">
-                <a class="treeview-item" [routerLink]="['branchBookingSummary']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['branchBookingSummary']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-scribd" aria-hidden="true"></i>Branch Booking Summary
                 </a>
               </li>
               <li class="waves-effect waves-light" *ngIf="canAccessModule('cargobookings')">
-                <a class="treeview-item" [routerLink]="['loadingSheet']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['loadingSheet']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-spinner" aria-hidden="true"></i>Loading Sheet
                 </a>
               </li>
               <li class="waves-effect waves-light" *ngIf="canAccessModule('cargobookings')">
-                <a class="treeview-item" [routerLink]="['unloadingSheet']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['unloadingSheet']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-undo" aria-hidden="true"></i>Unloading Sheet
                 </a>
               </li>
               <li class="waves-effect waves-light" *ngIf="canAccessModule('cargobookings')">
-                <a class="treeview-item" [routerLink]="['deliverySheet']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['deliverySheet']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-first-order" aria-hidden="true"></i>Delivery Sheet
                 </a>
               </li>
               <li class="waves-effect waves-light">
-                <a class="treeview-item" [routerLink]="['cargoTripSheet']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['cargoTripSheet']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-table" aria-hidden="true"></i>Cargo Trip Sheet
                 </a>
               </li>
               <li class="waves-effect waves-light">
-                <a class="treeview-item" [routerLink]="['cancellations']" [routerLinkActive]="['active']">
+                <a class="treeView-item" [routerLink]="['cancellations']" [routerLinkActive]="['active']">
                   <i class="icon fa fa-ban" aria-hidden="true"></i>Cancellations
                 </a>
               </li>
@@ -121,7 +121,7 @@
         </a>
         <ul class="treeView-menu">
           <li class="waves-effect waves-light"  *ngIf="canAccessModule('bookinganalytics')">
-            <a class="treeview-item" [routerLink]="['bookingAnalytics']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['bookingAnalytics']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Booking Analytics
             </a>
           </li>
@@ -170,7 +170,7 @@
             </a>
           </li>
           <li class="waves-effect waves-light"  [hidden] ="!currentUserDetails.superAdmin">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-product-hunt" aria-hidden="true"></i>Operator Accounts
             </a>
           </li>
@@ -363,89 +363,89 @@
         </a>
         <ul class="treeView-menu">
           <li class="waves-effect waves-light">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-pencil-square" aria-hidden="true"></i>Update Password
             </a>
           </li>
         </ul>
       </li>
-      <li class="treeview">
-        <a class="app-menu__item" href="" data-toggle="treeview" [routerLinkActive]="['active']">
+      <li class="treeView">
+        <a class="app-menu__item" href="" data-toggle="treeView" [routerLinkActive]="['active']">
           <i class="fa fa-cog fa-lg"></i>
           <span class="app-menu__label">Maintenance</span>
           <i class="treeView-indicator fa fa-angle-right"></i>
         </a>
         <ul class="treeView-menu">
           <li class="waves-effect waves-light" *ngIf="canAccessModule('inventories')">
-            <a class="treeview-item" [routerLink]="['inventories']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['inventories']" [routerLinkActive]="['active']">
               <i class="icon fa fa-indent" aria-hidden="true"></i>Inventories
             </a>
           </li>
           <li class="waves-effect waves-light" *ngIf="canAccessModule('jobs')">
-            <a class="treeview-item" [routerLink]="['jobs']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['jobs']" [routerLinkActive]="['active']">
               <i class="icon fa fa-tasks" aria-hidden="true"></i>Jobs
             </a>
           </li>
           <li class="waves-effect waves-light" *ngIf="canAccessModule('reminders')">
-            <a class="treeview-item" [routerLink]="['reminders']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['reminders']" [routerLinkActive]="['active']">
               <i class="icon fa fa-clock-o" aria-hidden="true"></i>Reminders
             </a>
           </li>
           <li class="waves-effect waves-light" *ngIf="canAccessModule('staffcomplaints')">
-            <a class="treeview-item" [routerLink]="['staffComplaints']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['staffComplaints']" [routerLinkActive]="['active']">
               <i class="icon fa fa-comment-o" aria-hidden="true"></i>Staff Complaints
             </a>
           </li>
           <li class="waves-effect waves-light" *ngIf="canAccessModule('tyres')">
-            <a class="treeview-item" [routerLink]="['tyres']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['tyres']" [routerLinkActive]="['active']">
               <i class="icon fa fa-circle-o" aria-hidden="true"></i>Tyres
             </a>
           </li>
         </ul>
       </li>
-      <li class="treeview" *ngIf="canAccessModule('config')">
-        <a class="app-menu__item" href="" data-toggle="treeview" [routerLinkActive]="['active']">
+      <li class="treeView" *ngIf="canAccessModule('config')">
+        <a class="app-menu__item" href="" data-toggle="treeView" [routerLinkActive]="['active']">
           <i class="fa fa-cogs fa-lg"></i>
           <span class="app-menu__label">Config</span>
           <i class="treeView-indicator fa fa-angle-right"></i>
         </a>
         <ul class="treeView-menu">
           <li class="waves-effect waves-light" *ngIf="canAccessModule('layouts')">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-window-restore" aria-hidden="true"></i>Layouts
             </a>
           </li>
           <li class="waves-effect waves-light" *ngIf="canAccessModule('addservice')">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-plus-square" aria-hidden="true"></i>Add Service
             </a>
           </li>
         </ul>
       </li>
-      <li class="treeview" *ngIf="canAccessModule('servicefeedback')">
-        <a class="app-menu__item" href="" data-toggle="treeview" [routerLinkActive]="['active']">
+      <li class="treeView" *ngIf="canAccessModule('servicefeedback')">
+        <a class="app-menu__item" href="" data-toggle="treeView" [routerLinkActive]="['active']">
           <i class="fa fa-file-pdf-o fa-lg"></i>
           <span class="app-menu__label">Customer Reports</span>
           <i class="treeView-indicator fa fa-angle-right"></i>
         </a>
         <ul class="treeView-menu">
           <li class="waves-effect waves-light">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-commenting" aria-hidden="true"></i>Service Feedback
             </a>
           </li>
           <li class="waves-effect waves-light">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-retweet" aria-hidden="true"></i>Reviews
             </a>
           </li>
           <li class="waves-effect waves-light">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-comment" aria-hidden="true"></i>Escalations
             </a>
           </li>
           <li class="waves-effect waves-light">
-            <a class="treeview-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
+            <a class="treeView-item" [routerLink]="['plans']" [routerLinkActive]="['active']">
               <i class="icon fa fa-search-plus" aria-hidden="true"></i>Search Ticket
             </a>
           </li>
